Make invisible chars visible and fix nits

--- a/styles.less
+++ b/styles.less
@@ -37,7 +37,21 @@ body, html {
     // padding-right: 1em;
     // font-size: 14px;
   }
+
+  .cursor-line {
+    background: rgba(200,200,200,0.1)
+  }
 }
 
 .editor .cursor {
+}
+
+@hints-color: #cacaca;
+@hints-opacity: 0.5;
+
+.editor {
+  .invisible-character {
+    color: @hints-color;
+    opacity: @hints-opacity;
+  }
 }
